<resources>
    <string name="app_name">FileFinderWidget</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Find recently added files</string>
    <string name="settings_text">Settings</string>
    <string name="loading">Loading</string>
    <string name="refresh">refresh</string>
    <string name="number_of_files_to_display">Number of files to display</string>
    <string name="arrow_down">arrow down</string>
    <string name="exclude_directories">Exclude directories</string>
    <string name="done">Done</string>
    <string name="directory">Directory</string>
    <string name="arrow_right">arrow right</string>
    <string name="exclude_system_files">Exclude system files</string>
    <string name="add_permissions">Please go to Widget settings to add permissions for file storage</string>
    <string name="file">file</string>
    <string name="share">SHARE</string>
    <string name="open">OPEN</string>
    <string name="all_files">All Files</string>
    <string name="documents">Documents</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="music">Music</string>
    <string name="downloads">Downloads</string>
    <string-array name="display_numbers">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
    </string-array>
</resources>